--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <!-- Dependencies -->
-        <spring.version>3.0.9.RELEASE</spring.version>
+        <spring.version>3.0.8.RELEASE</spring.version>
         <jackson.version>2.10.3</jackson.version>
         <junit.version>4.12</junit.version>
 
@@ -29,6 +29,7 @@
     <dependencies>
 
         <!-- Spring -->
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-function-kotlin</artifactId>
@@ -38,6 +39,14 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-function-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <!-- Deployment -->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-function-deployer</artifactId>
             <version>${spring.version}</version>
         </dependency>
 
@@ -68,6 +77,7 @@
         </dependency>
 
         <!-- Kotlin -->
+
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
@@ -75,6 +85,7 @@
         </dependency>
 
         <!-- Testing -->
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
