--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <!-- Build Configuration -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.class>org.example.Application</main.class>
-        <kotlin.version>1.3.72</kotlin.version>
+        <kotlin.version>1.4.0</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -58,12 +58,12 @@
             <artifactId>spring-cloud-function-context</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-function-web</artifactId>-->
-<!--            <version>${spring.version}</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-function-web</artifactId>
+            <version>${spring.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Deployment -->
 
@@ -132,7 +132,7 @@
     <build>
         <plugins>
 
-            <!-- Compilation -->
+            <!-- Kotlin Compilation -->
 
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -198,27 +198,27 @@
 
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
-
+            <!-- Build a Jar for local deployment as a web server. -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.2.6.RELEASE</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.springframework.boot.experimental</groupId>
-                        <artifactId>spring-boot-thin-layout</artifactId>
-                        <version>1.0.25.RELEASE</version>
-                    </dependency>
-                </dependencies>
+                <version>2.3.2.RELEASE</version>
+
+                <configuration>
+                    <classifier>web</classifier>
+                    <mainClass>${main.class}</mainClass>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
+            <!-- Build a Jar for deployment to AWS. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -237,18 +237,23 @@
                     <shadedClassifierName>aws</shadedClassifierName>
 
                     <transformers>
+
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>${main.class}</mainClass>
                         </transformer>
+
                         <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                             <resource>META-INF/spring.handlers</resource>
                         </transformer>
+
                         <transformer implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
                             <resource>META-INF/spring.factories</resource>
                         </transformer>
+
                         <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                             <resource>META-INF/spring.schemas</resource>
                         </transformer>
+
                     </transformers>
 
                     <filters>
@@ -271,7 +276,13 @@
                 </executions>
             </plugin>
 
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
 
 
 
