--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>jar</packaging>
 
     <name>Spring Cloud Function Prototype</name>
+    <description>Example Kotlin project using Spring Cloud Function</description>
 
     <properties>
 
@@ -20,11 +21,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- External Dependency Version -->
-        <spring.version>3.0.9.RELEASE</spring.version>
-        <jackson.version>2.10.3</jackson.version>
-
-        <aws-lambda-java-events.version>2.0.2</aws-lambda-java-events.version>
         <aws-lambda-java-core.version>1.1.0</aws-lambda-java-core.version>
+        <aws-lambda-java-events.version>2.0.2</aws-lambda-java-events.version>
+        <jackson.version>2.10.3</jackson.version>
+        <spring.version>3.0.9.RELEASE</spring.version>
 
         <!-- Plugin Versions -->
         <maven-assembly-plugin.version>2.4.1</maven-assembly-plugin.version>
