--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <groupId>org.example</groupId>
     <artifactId>spring-cloud-function-prototype</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+
+    <modules>
+        <module>full-spring</module>
+    </modules>
 
     <name>Spring Cloud Function Prototype</name>
     <description>Example Kotlin project using Spring Cloud Function</description>
@@ -20,9 +24,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- TODO: Move this when making this multi-module. -->
-        <!-- Project Specific -->
-        <jar-base-name>full-spring-lambda</jar-base-name>
+        <!-- Build Output -->
+        <jar-base-name>placeholder</jar-base-name>
         <aws-jar-name>${jar-base-name}-aws</aws-jar-name>
         <web-jar-name>${jar-base-name}-web</web-jar-name>
 
