Corrected package structure. Added example of adding a bean to the catalog in a functional style.

--- a/full-spring/pom.xml
+++ b/full-spring/pom.xml
@@ -19,8 +19,7 @@
     <properties>
 
         <!-- Build Configuration -->
-        <main.class>org.example.Application</main.class>
-        <jar-base-name>full-spring-lambda</jar-base-name>
+        <main.class>org.example.full.Application</main.class>
 
     </properties>
 
