--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Build Output -->
-        <main.class>org.example.Application</main.class>
+        <main.class>placeholder</main.class>
         <jar-base-name>${project.artifactId}-lambda</jar-base-name>
         <aws-jar-name>${jar-base-name}-aws</aws-jar-name>
         <web-jar-name>${jar-base-name}-web</web-jar-name>
@@ -58,7 +58,7 @@
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-function-web</artifactId>
+            <artifactId>spring-cloud-starter-function-webflux</artifactId>
             <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
