Initial implementation using Functional Bean Definition style.

--- a/full-spring/src/main/resources/application.properties
+++ b/full-spring/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=9101
 
+# The package to scan for classes implementing one of java.util.function.*
+spring.cloud.function.scan.packages=org.example.functional.function
+
 some.important.variable=Hello
