--- a/functional-spring/pom.xml
+++ b/functional-spring/pom.xml
@@ -14,7 +14,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Functional Spring Example</name>
-    <description>This project demonstrates using Spring fully within the lambda functions.</description>
+    <description>
+        This project demonstrates manually creating the Spring beans in the Functional Bean Definition style.
+    </description>
 
     <properties>
 
