--- a/pom.xml
+++ b/pom.xml
@@ -46,21 +46,21 @@
 
     <dependencies>
 
-        <!-- Spring Local Web Deployment -->
+        <!-- AWS Deployment -->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-function-adapter-aws</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <!-- Local Web Deployment -->
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-function-webflux</artifactId>
             <version>${spring.version}</version>
             <scope>provided</scope>
-        </dependency>
-
-        <!-- Spring AWS Deployment -->
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-function-adapter-aws</artifactId>
-            <version>${spring.version}</version>
         </dependency>
 
         <!-- AWS -->
@@ -215,6 +215,22 @@
                         </transformer>
 
                     </transformers>
+
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/license/**</exclude>
+                                <exclude>META-INF/maven/**</exclude>
+                                <exclude>META-INF/LICENSE</exclude>
+                                <exclude>META-INF/NOTICE</exclude>
+                                <exclude>META-INF/*.txt</exclude>
+                                <exclude>LICENSE</exclude>
+                                <exclude>NOTICE</exclude>
+                                <exclude>/*.txt</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
                 </configuration>
 
                 <executions>
