--- a/client/pom.xml
+++ b/client/pom.xml
@@ -20,7 +20,7 @@
 
         <!-- External Dependency Versions -->
         <awssdk.version>2.10.54</awssdk.version>
-        <spring.version>5.2.8.RELEASE</spring.version>
+        <spring-webflux.version>5.2.8.RELEASE</spring-webflux.version>
 
     </properties>
 
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
-            <version>${spring.version}</version>
+            <version>${spring-webflux.version}</version>
         </dependency>
 
     </dependencies>
