--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <jackson.version>2.10.3</jackson.version>
         <junit.jupiter.version>5.6.0</junit.jupiter.version>
         <junit.platform.version>1.6.0</junit.platform.version>
+        <mockito.version>2.27.0</mockito.version>
+        <mockito-kotlin.version>2.2.0</mockito-kotlin.version>
         <spring.version>3.0.9.RELEASE</spring.version>
 
         <!-- Plugin Versions -->
@@ -107,7 +109,7 @@
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
@@ -120,9 +122,16 @@
         </dependency>
 
         <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nhaarman.mockitokotlin2</groupId>
+            <artifactId>mockito-kotlin</artifactId>
+            <version>${mockito-kotlin.version}</version>
             <scope>test</scope>
         </dependency>
 
