--- a/client/pom.xml
+++ b/client/pom.xml
@@ -40,6 +40,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
             <version>${spring-webflux.version}</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
